file upload, download

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -3,3 +3,10 @@ $dark-color: #343a40;
 $light-color: #f4f4f4;
 $danger-color: #dc3545;
 $success-color: #28a745;
+
+.avatar {
+  vertical-align: middle;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+}
