--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,10 +14,10 @@
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #fff;
+  background-color: #c1e1ec;
   color: #333;
 }
 
@@ -245,10 +245,10 @@ img {
   color: #888;
 }
 
-.form input[type='text'],
-.form input[type='email'],
-.form input[type='password'],
-.form input[type='date'],
+.form input[type="text"],
+.form input[type="email"],
+.form input[type="password"],
+.form input[type="date"],
 .form select,
 .form textarea {
   display: block;
@@ -258,7 +258,7 @@ img {
   border: 1px solid #ccc;
 }
 
-.form input[type='submit'],
+.form input[type="submit"],
 button {
   font: inherit;
 }
@@ -333,7 +333,7 @@ button {
 /* Landing Page */
 .landing {
   position: relative;
-  background: url('./img/showcase.jpg') no-repeat center center/cover;
+  background: url("./img/showcase.jpg") no-repeat center center/cover;
   height: 100vh;
 }
 
@@ -364,10 +364,10 @@ button {
 .profile-grid {
   display: grid;
   grid-template-areas:
-    'top top'
-    'about about'
-    'exp edu'
-    'github github';
+    "top top"
+    "about about"
+    "exp edu"
+    "github github";
   grid-gap: 1rem;
 }
 
@@ -550,11 +550,11 @@ button {
 
   .profile-grid {
     grid-template-areas:
-      'top'
-      'about'
-      'exp'
-      'edu'
-      'github';
+      "top"
+      "about"
+      "exp"
+      "edu"
+      "github";
   }
 
   .profile-about .skills {
@@ -578,9 +578,72 @@ button {
 .avatar {
   width: 90px;
   height: 90px;
-  margin: 10px;
+  margin-left: 30px;
+  margin-top: 20px;
 }
 
 .liked {
   background-color: green !important;
+}
+
+.card-post {
+  max-width: 30rem;
+  border: 2px solid var(--primary-color) !important;
+  margin-top: 100px !important;
+}
+
+.card-body {
+  border: none;
+}
+.username {
+  margin-left: 30px;
+}
+
+.post-img {
+  max-height: 350px;
+}
+
+.accordion {
+  margin: 10px;
+  padding: 15px;
+}
+
+.post-text {
+  font-size: 18px;
+  padding: 15px;
+}
+
+.comment-like-section {
+  border: none !important;
+}
+
+.comment-like-section button {
+  margin-right: 15px;
+  font-size: 18px;
+  outline: none !important;
+}
+
+.btn:focus,
+.btn:active {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.comment-item {
+  margin-left: 25px;
+}
+
+.avatar-comment {
+  width: 90px;
+  height: 90px;
+  margin-left: auto;
+  margin-top: 20px;
+}
+
+.comentee-name {
+  margin-left: auto;
+}
+
+.comment-text {
+  font-size: 20px;
 }
