--- a/client/src/App.css
+++ b/client/src/App.css
@@ -648,3 +648,29 @@ button {
   font-size: 20px;
 }
 
+.profile-post-card {
+  max-width: 30rem;
+  border: 2px solid var(--primary-color) !important;
+  margin-top: 100px !important;
+}
+
+.profile-card {
+  background-color: lightblue !important;
+  color: black;
+  border: 1px solid black !important;
+}
+.profile-card-follows {
+  background-color: lightblue !important;
+  color: black;
+  border: none;
+}
+.del-post-btn {
+  margin-top: 5px;
+  float: right;
+}
+
+@media only screen and (min-width: 850px) {
+  .floater {
+    position: fixed;
+  }
+}
